--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <section class="home">
       <div class="home-ctn">
         <div class="home-text-ctn">
-          <h1><span>We're building the future of tomorrow</span></h1>
+          <h1>
+            <span>We're Software Engineers</span
+            ><span>from Nigeria working to</span>
+            <span> make impact</span>
+          </h1>
           <p>
             Regardless of not being directly inclined in the tech space, we have
             out of passion tried to learn to contribute for the growth of the
             community
           </p>
         </div>
-        <div class="home-bg-img-ctn"></div>
       </div>
+      <div class="home-bg-img-ctn"></div>
     </section>
     <script src="gsap.min.js"></script>
     <script type="module" src="/main.js"></script>
