added styles.css directly to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Amigo collaboration website</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <section class="home">
@@ -25,6 +26,6 @@
       <div class="home-bg-img-ctn"></div>
     </section>
     <script src="gsap.min.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
