--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p>
             Regardless of not being directly inclined in the tech space, we have
             out of passion tried to learn to contribute for the growth of the
-            community
+            community.
           </p>
         </div>
       </div>
