use more inclusive heading

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="home-text-ctn">
           <h1>
             <span>We're Software Engineers</span
-            ><span>from Nigeria working to</span>
-            <span> make impact</span>
+            ><span>with great experience</span>
+            <span>working to make impact</span>
           </h1>
           <p>
             Regardless of not being directly inclined in the tech space, we have
