Added list of communities to index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             growing.
           </p>
           <br>
+          <p> You can join Tech Communities in Nigeria using this link</p>
         </div>
       </div>
       <div class="home-bg-img-ctn"></div>
